<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/shape_card"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/App_MarginHor_M"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/ivFoodImageFL"
            android:layout_width="@dimen/Food_Image_Width"
            android:layout_height="@dimen/Food_Image_Height"
            android:layout_marginBottom="@dimen/App_MarginVer_S"
            android:scaleType="fitXY"
            android:contentDescription="@string/CD_Image"
            android:src="@drawable/ic_food_bwhite_32"
            android:background="@drawable/shape_box_image"
            />
        <TextView
            android:id="@+id/tvFoodNameFL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Food_Attribute_Height"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/Food_Name_Sample"
            android:textSize="@dimen/App_TextSize_S"
            android:textColor="@color/Card_TextColor"
            android:background="@drawable/shape_box_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Food_Attribute_Height"
            android:layout_marginBottom="@dimen/App_MarginVer_S"
            android:orientation="horizontal"
            android:background="@drawable/shape_box_text"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Food_Calories_Hint"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_Hint_TextColor"
                />
            <TextView
                android:id="@+id/tvFoodCaloriesFL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Food_Calories_Sample"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_TextColor"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Food_Attribute_Height"
            android:layout_marginBottom="@dimen/App_MarginVer_S"
            android:orientation="horizontal"
            android:background="@drawable/shape_box_text"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Food_Fat_Hint"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_Hint_TextColor"
                />
            <TextView
                android:id="@+id/tvFoodFatFL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Food_Fat_Sample"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_TextColor"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Food_Attribute_Height"
            android:layout_marginBottom="@dimen/App_MarginVer_S"
            android:orientation="horizontal"
            android:background="@drawable/shape_box_text"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Food_Carbohydrate_Hint"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_Hint_TextColor"
                />
            <TextView
                android:id="@+id/tvFoodCarbohydrateFL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Food_Carbohydrate_Sample"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_TextColor"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Food_Attribute_Height"
            android:orientation="horizontal"
            android:background="@drawable/shape_box_text"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Food_Protein_Hint"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_Hint_TextColor"
                />
            <TextView
                android:id="@+id/tvFoodProteinFL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Food_Protein_Sample"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_TextColor"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>