<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/App_MarginHor_M"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/ivPetIconPL"
            android:layout_width="@dimen/Pet_Image_Width"
            android:layout_height="@dimen/Pet_Image_Height"
            android:layout_marginBottom="@dimen/App_MarginVer_S"
            android:contentDescription="@string/CD_Icon"
            android:src="@drawable/ic_pet_cat_128"
            android:background="@drawable/shape_box_text"
            />
        <TextView
            android:id="@+id/tvPetLabelPL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Pet_Attribute_Height"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/Pet_Type_Cat"
            android:textSize="@dimen/App_TextSize_S"
            android:textColor="@color/Card_TextColor"
            android:background="@drawable/shape_box_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Pet_Attribute_Height"
            android:layout_marginBottom="@dimen/App_MarginVer_S"
            android:orientation="horizontal"
            android:background="@drawable/shape_box_text"
            >
            <TextView
                android:id="@+id/tvPetNamePL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Pet_Name_Sample"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_TextColor"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Pet_Attribute_Height"
            android:layout_marginBottom="@dimen/App_MarginVer_S"
            android:orientation="horizontal"
            android:background="@drawable/shape_box_text"
            >
            <TextView
                android:id="@+id/tvPetAgePL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Pet_Age_Sample"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_TextColor"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Pet_Attribute_Height"
            android:layout_marginBottom="@dimen/App_MarginVer_S"
            android:orientation="horizontal"
            android:background="@drawable/shape_box_text"
            >
            <TextView
                android:id="@+id/tvPetHeightPL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Pet_Height_Sample"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_TextColor"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Pet_Attribute_Height"
            android:layout_marginBottom="@dimen/App_MarginVer_S"
            android:orientation="horizontal"
            android:background="@drawable/shape_box_text"
            >
            <TextView
                android:id="@+id/tvPetWeightPL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Pet_Weight_Sample"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_TextColor"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Pet_Attribute_Height"
            android:orientation="horizontal"
            android:background="@drawable/shape_box_text"
            >
            <TextView
                android:id="@+id/tvPetBreedPL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/Pet_Breed_Sample"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_TextColor"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

