<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/Dialog_MinWidth"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_card"
        >
        <Spinner
            android:id="@+id/sPetTypeNPL"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:spinnerMode="dialog"
            android:prompt="@string/Pet_Type_Hint"
            android:theme="@style/SpinnerDialogTheme"
            />
        <LinearLayout
            android:id="@+id/llPetTypeNPL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/App_MarginHor_M"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:foreground="@drawable/ripple_selectable"
            >
            <ImageView
                android:id="@+id/ivPetIconNPL"
                android:layout_width="@dimen/Pet_Image_Width"
                android:layout_height="@dimen/Pet_Image_Height"
                android:layout_marginBottom="@dimen/App_MarginVer_S"
                android:contentDescription="@string/CD_Icon"
                android:src="@drawable/ic_pet_cat_128"
                android:background="@drawable/shape_box_text"
                />
            <TextView
                android:id="@+id/tvPetLabelNPL"
                android:layout_width="match_parent"
                android:layout_height="@dimen/Pet_Attribute_Height"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/Pet_Type_Cat"
                android:textSize="@dimen/App_TextSize_S"
                android:textColor="@color/Card_TextColor"
                android:background="@drawable/shape_box_text"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Pet_Attribute_Height"
                android:layout_marginBottom="@dimen/App_MarginVer_S"
                android:orientation="horizontal"
                android:background="@drawable/shape_box_text"
                >
                <EditText
                    android:id="@+id/etPetNameNPL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textNoSuggestions"
                    android:importantForAutofill="no"
                    android:maxLines="1"
                    android:maxLength="18"
                    android:hint="@string/Pet_Name_Hint"
                    android:textSize="@dimen/App_TextSize_S"
                    android:textColor="@color/Card_TextColor"
                    android:background="@null"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Pet_Attribute_Height"
                android:layout_marginBottom="@dimen/App_MarginVer_S"
                android:orientation="horizontal"
                android:background="@drawable/shape_box_text"
                >
                <EditText
                    android:id="@+id/etPetAgeNPL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    android:maxLines="1"
                    android:maxLength="2"
                    android:hint="@string/Pet_Age_Hint"
                    android:textSize="@dimen/App_TextSize_S"
                    android:textColor="@color/Card_TextColor"
                    android:background="@null"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Pet_Attribute_Height"
                android:layout_marginBottom="@dimen/App_MarginVer_S"
                android:orientation="horizontal"
                android:background="@drawable/shape_box_text"
                >
                <EditText
                    android:id="@+id/etPetHeightNPL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    android:maxLines="1"
                    android:maxLength="3"
                    android:hint="@string/Pet_Height_Hint"
                    android:textSize="@dimen/App_TextSize_S"
                    android:textColor="@color/Card_TextColor"
                    android:background="@null"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Pet_Attribute_Height"
                android:layout_marginBottom="@dimen/App_MarginVer_S"
                android:orientation="horizontal"
                android:background="@drawable/shape_box_text"
                >
                <EditText
                    android:id="@+id/etPetWeightNPL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    android:maxLines="1"
                    android:maxLength="5"
                    android:hint="@string/Pet_Weight_Hint"
                    android:textSize="@dimen/App_TextSize_S"
                    android:textColor="@color/Card_TextColor"
                    android:background="@null"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Pet_Attribute_Height"
                android:orientation="horizontal"
                android:background="@drawable/shape_box_text"
                >
                <EditText
                    android:id="@+id/etPetBreedNPL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textNoSuggestions"
                    android:importantForAutofill="no"
                    android:maxLines="1"
                    android:maxLength="18"
                    android:hint="@string/Pet_Breed_Hint"
                    android:textSize="@dimen/App_TextSize_S"
                    android:textColor="@color/Card_TextColor"
                    android:background="@null"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false"
        android:background="@drawable/shape_card_button"
        >
        <LinearLayout
            android:id="@+id/llCancelPetNPL"
            android:layout_width="0dp"
            android:layout_height="@dimen/Button_Height"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/App_MarginHor_M"
            android:orientation="horizontal"
            android:foreground="@drawable/ripple_selectable"
            android:background="@drawable/shape_box_button"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Cancel_Button"
                android:textSize="@dimen/App_TextSize_M"
                android:textColor="@color/Button_TextColor"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llConfirmPetNPL"
            android:layout_width="0dp"
            android:layout_height="@dimen/Button_Height"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:foreground="@drawable/ripple_selectable"
            android:background="@drawable/shape_box_button"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Confirm_Button"
                android:textSize="@dimen/App_TextSize_M"
                android:textColor="@color/Button_TextColor"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>