<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.MapFragment"
    >
    <include
        layout="@layout/toolbar_map"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/App_Margin_S"
        >
        <com.google.android.gms.maps.MapView
            android:id="@+id/mapViewMF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <com.skyfishjy.library.RippleBackground
            android:id="@+id/rippleMF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:rb_radius="32dp"
            app:rb_rippleAmount="4"
            app:rb_duration="3000"
            app:rb_scale="6"
            app:rb_color="#0099CC"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:translationY="-16dp"
                android:contentDescription="@string/CD_Icon"
                android:src="@drawable/ic_map_black_32"
                />
        </com.skyfishjy.library.RippleBackground>

        <TextView
            android:id="@+id/tvFindVetsMF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/App_MarginHor_S"
            android:layout_above="@+id/tvFindStoresMF"
            android:gravity="center"
            android:text="@string/Map_Find_Vets"
            android:textSize="@dimen/App_TextSize_S"
            android:textColor="@color/Button_TextColor"
            android:foreground="@drawable/ripple_selectable"
            android:background="@drawable/shape_card_button"
            />
        <TextView
            android:id="@+id/tvFindStoresMF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/App_Margin_S"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/Map_Find_Stores"
            android:textSize="@dimen/App_TextSize_S"
            android:textColor="@color/Button_TextColor"
            android:foreground="@drawable/ripple_selectable"
            android:background="@drawable/shape_card_button"
            />
    </RelativeLayout>
</LinearLayout>